2009-10-16  Francois Suter  <francois@typo3.org>

	* Cleanup #12245: Reports: Cleaned up API for providers in status report

2009-10-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11963: MEDIA.renderType in TypoScript is reset
	* Fixed bug #12207: $this->doc->sectionHeader return wrong HTML

2009-10-15  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #8728: PHP Warning, if SQL error occurs in class t3lib_db in functions which depend on an existing resultset (thanks to Felix Oertel)
	* Fixed bug #12196: PHP warning in FE with activated DLOG and mbstring set as t3lib_cs_utils

2009-10-14  Oliver Hader  <oliver@typo3.org>

	* Reverted bugfix #10050: Traversing back page records used in CONTENT object does not work on root page

2009-10-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12209: [felogin] lang label for send change password link misses variable for valid end time

2009-10-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12186: EM sends Location-header without exit (thanks to Steffen Gebert)
	* Added ext_icon for sysext version (thanks to Steffen Gebert)
	* Cleanup: Whitespace cleaning of typo3 sysext files
	* Cleanup: Whitespace cleaning of typo3 files
	* Cleanup: Whitespace cleaning of t3lib files

2009-10-11  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #10971: Fatal error in impexp module: Call to a member function includeLLFile() on a non-object (thanks to Andre Steiling)
	* Follow-up to bug #12154: renamed t3lib_MessageQueue to t3lib_FlashMessageQueue, changed some some function names
	  in t3lib_flashmessages and t3lib_FlashMessageQueue.
	* Follow-up to bug #9355: Fixed some broken utf-8 chars in class t3lib_error_debugexceptionhandler
	* Fixed bug #12164: Use flashmessages to display messages in fileadmin

2009-10-10  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12129 (follow-up to bug #11986): Translation update broken with activated output compression (thanks to Steffen Gebert)

2009-10-09  Steffen Kamper  <info@sk-typo3.de>
